migrate server settings to db (#1389)
